<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_userRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/mockup_user_rating"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_releaseDate"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_releaseDate" />

    <TextView
        android:id="@+id/tv_releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:text="@string/mockup_release_date"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/iv_favorite_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_off"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_play_trailer"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_releaseDate" />

    <TextView
        android:id="@+id/tv_favorite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favorites"
        app:layout_constraintLeft_toRightOf="@+id/iv_favorite_star"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/iv_favorite_star"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_favorite_star"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/iv_play_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_media_play"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_userRating"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_releaseDate" />

    <TextView
        android:id="@+id/tv_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_trailer"
        app:layout_constraintLeft_toRightOf="@+id/iv_play_trailer"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/iv_play_trailer"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_play_trailer"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>